@startuml class-diagram
title Diagrama de Clases del Dominio - Gastos Personales

skinparam classAttributeIconSize 0
hide methods

enum Currency {
    PEN
    USD
}

class User {
    - id : String
    - dni : String
    - firstName : String
    - lastName : String
    - email : String
    - role : String
    - createdAt : Instant
}

class Expense {
    - id : String
    - amount : BigDecimal
    - currency : Currency
    - description : String
    - date : LocalDate
    - createdAt : Instant
    - updatedAt : Instant
}

class Category {
    - id : String
    - name : String
    - icon : String
    - description : String
    - sortOrder : Integer
}

class UserSettings {
    - id : String
    - monthlyIncome : BigDecimal
    - alertsEnabled : boolean
    - updatedAt : Instant
}

' ===== Relaciones de dominio =====
User "1" --> "*" Expense : registra
Category "1" --> "*" Expense : clasifica
User "1" --> "0..1" UserSettings : configura
Expense ..> Currency : usa

@enduml
